fixed crash, code cleanup